# TripRender

./: .env.example  .gitignore  README.md  build.js  index.html  package-lock.json  package.json  rust-toolchain.toml
.cursor/plans/: gh-pages-env-token.plan.md
.github/workflows/: deploy.yml  tauri-windows.yml
scripts/: ensure-simulator-booted.js  free-port-1420.js  ios-submit-pipeline.js  ios-submit.js  ios-xcode-sign-env.js  tauri-ios-release-build.js  tauri-with-rustup.js
scripts/ios-cargo/: cargo
src/: tauri-export.js
src-tauri/: Cargo.toml  Info.ios.plist  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: save-video.toml
src-tauri/src/: ios_save.rs  lib.rs
